--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
                 <input id="systemSize" required type="number"  placeholder="System size">
                 <input id="systemYield" required type ="number"  placeholder="System yield">
                 <input id="ratePerKWh" required type="number"  placeholder="Rate per kWh">
-                <button id="btn">Calculate</button>
+                <button type="button" id="btn">Calculate</button>
             </form>
             <p id="clearInputs">Clear</p>
             <h1 id="showResult"></h1>
         </main>
     </div> 
-<script type="text/JavaScript" src="index.js"></script>
+    <script type="text/JavaScript" src="index.js"></script>
 </body>
 </html>
