Added @media screen and (max-width: 928px), so that app is displayed responsively on various screen devices.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Solar Revenue Calculator</title>
 </head>
 <body>
-    <h1> Solar Revenue Calculator</h1>
+    <h1 class="headline"> Solar Revenue Calculator</h1>
     <div class="bkgContainer">
         <main class="container">
             <form>
